# databricks-over-the-top

./: .gitignore  README.md
cdc/: README.md  databricks.yml  pyproject.toml
cdc/resources/: cdc_etl.job.yml  cdc_etl.pipeline.yml  sample_job.job.yml
cdc/src/cdc_etl/: README.md
cdc/src/cdc_etl/transformations/: products_bronze_ingest_flow.py  products_cdc_clean_flow.py  products_history_materialize_flow.py  products_materialize_flow.py
ott_cdc/: README.md  databricks.yml  pyproject.toml
ott_cdc/resources/: ott_cdc.job.yml  ott_cdc.pipeline.yml
ott_cdc/src/: notebook.ipynb  pipeline.ipynb
ott_cdc/tests/: main_test.py
synthetic-ingestion/: .env-example  pyproject.toml
synthetic-ingestion/.devcontainer/: connector-config.json  data.sql  devcontainer.json  docker-compose.yml  init-original.sql  init.sql  postgres-servers.json
synthetic-ingestion/cdc_data/ott/public/product/: ott_public_product_1764009363572614000.json
synthetic-ingestion/src/ott_analytics_ingestion/: __init__.py
synthetic-ingestion/src/ott_analytics_ingestion/cdc_consumer/: __init__.py
synthetic-ingestion/src/ott_analytics_ingestion/database/: __init__.py
synthetic-ingestion/src/ott_analytics_ingestion/utils/: __init__.py
